[project]
name = "measure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-circuitpython-dht>=4.0.9",
    "bme280>=0.7",
    "dotenv>=0.9.9",
    "influxdb>=5.3.2",
    "rpi-gpio-def>=0.2; sys_platform == 'win32'",
    "RPi.GPIO>=0.7.1; sys_platform  == 'linux'",
    "smbus>=1.1.post2; sys_platform == 'linux'",
]
